proj1/tests/error/function_type_errors2.py
def f(x::int,y::int):
	return x+y
x::int, int -> int = f
print x(1,2)
